feat: CRUD categories
